syntax = "proto3";

package grpctwoservice;

//option go_package = "./cmd/grpc/grpctwoservice/pb";

//option go_package = "github.com/yourusername/yourproject/metrics";
option go_package = "github.com/dmitryDevGoMid/go-service-collect-metrics/internal/server/pb";

service MetricsService {
    rpc Metrics (MetricsRequest) returns (MetricsResponse);
    rpc MetricsTest (MetricsRequest) returns (MetricsResponse);
  }

message MetricsRequest {
    string id = 1;
    string mtype = 2;
    double value = 3;
    int64 delta = 4;
}

message MetricsResponse {
    bool success = 1;
}

message MetricsTestRequest {
    string id = 1;
    string mtype = 2;
    double value = 3;
    int64 delta = 4;
}

message MetricsTestResponse {
    bool success = 1;
}